--- a/index.html
+++ b/index.html
@@ -2,10 +2,62 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Página de Teste</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Redirecionamento</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #e52d27, #b31217);
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .container {
+      background: rgba(0, 0, 0, 0.4);
+      padding: 40px;
+      border-radius: 16px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+    }
+
+    a.button {
+      background-color: #ffffff;
+      color: #b31217;
+      padding: 14px 28px;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1rem;
+      transition: background 0.3s ease, color 0.3s ease;
+    }
+
+    a.button:hover {
+      background-color: #ffe5e5;
+      color: #900000;
+    }
+  </style>
 </head>
 <body>
-  <h1>Funcionou!</h1>
-  <p>Essa página está usando o domínio doadoresdesangue.com.br via GitHub Pages.</p>
+  <div class="container">
+    <h1>Olá! Este não é o nosso site oficial.</h1>
+    <p>O nosso novo domínio oficial é:</p>
+    <p><strong>https://doadoresdesangue.ong.br/</strong></p>
+    <a class="button" href="https://doadoresdesangue.ong.br/" target="_blank">Ir para o site oficial</a>
+  </div>
 </body>
 </html>
