--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #e52d27, #b31217);
-      color: #fff;
+      background: linear-gradient(to right, #f0f4f8, #e8f0fe);
+      color: #2c3e50;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -19,43 +19,47 @@
     }
 
     .container {
-      background: rgba(0, 0, 0, 0.4);
+      background: #ffffff;
       padding: 40px;
       border-radius: 16px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+      max-width: 500px;
+      width: 100%;
     }
 
     h1 {
-      font-size: 2.5rem;
+      font-size: 2rem;
       margin-bottom: 20px;
+      color: #34495e;
     }
 
     p {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       margin-bottom: 30px;
+      color: #555;
     }
 
     a.button {
-      background-color: #ffffff;
-      color: #b31217;
-      padding: 14px 28px;
-      border-radius: 30px;
+      background-color: #4a90e2;
+      color: #ffffff;
+      padding: 12px 24px;
+      border-radius: 25px;
       text-decoration: none;
-      font-weight: bold;
+      font-weight: 500;
       font-size: 1rem;
-      transition: background 0.3s ease, color 0.3s ease;
+      transition: background 0.3s ease;
+      display: inline-block;
     }
 
     a.button:hover {
-      background-color: #ffe5e5;
-      color: #900000;
+      background-color: #357ab7;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Olá! Este não é o nosso site oficial.</h1>
-    <p>O nosso novo domínio oficial é:</p>
+    <h1>Este não é o site oficial</h1>
+    <p>Acesse o nosso novo domínio oficial clicando no botão abaixo:</p>
     <p><strong>https://doadoresdesangue.ong.br/</strong></p>
     <a class="button" href="https://doadoresdesangue.ong.br/" target="_blank">Ir para o site oficial</a>
   </div>
